# hunkr

./: .gitignore  Cargo.toml  README.md  config.example.yaml  theme.example.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture-global-plan-v2.md  architecture-refactor.md
src/: app.rs  atomic_write.rs  clipboard.rs  comments.rs  config.rs  git_data.rs  lib.rs  main.rs  model.rs  store.rs  text_sanitize.rs
src/app/: comment_helpers.rs  core_helpers.rs  driver.rs  driver_tests.rs  flow.rs  lifecycle_input.rs  lifecycle_mouse.rs  lifecycle_render.rs  lifecycle_view.rs  navigation.rs  nerd_fonts.rs  path_watch_driver.rs  ports.rs  review_state_sync.rs  selection_helpers.rs  shell_command.rs  shell_output_policy_tests.rs  state.rs  system_theme.rs  tests.rs  text_edit.rs  theme_palette.rs  theme_reload_driver.rs  tree_highlight.rs  worktree_switcher.rs
src/app/input/: global_router.rs  mod.rs  modal_controller.rs  policy.rs  shell_controller.rs
src/app/input/panes/: commits.rs  diff.rs  files.rs  mod.rs
src/app/runtime/: mod.rs  tick_scheduler.rs
src/app/services/: comment_workflow.rs  mod.rs  repository_workflow.rs  status_workflow.rs
src/app/ui/: contracts.rs  diff_pane.rs  list_panes.rs  mod.rs  snapshot.rs  style.rs  view_models.rs
src/comments/: tests.rs
src/config/: tests.rs
src/git_data/: tests.rs
src/store/: tests.rs
tests/: git_service.rs
