[package]
name = "hunkr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.29"
fs2 = "0.4"
git2 = { version = "0.20", default-features = false, features = ["https"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
syntect = "5.3"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.23"
