[package]
name = "hunkr"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Local-first TUI commit reviewer for multi-commit net diff review"
readme = "README.md"
repository = "https://github.com/bbonvi/hunkr"
homepage = "https://github.com/bbonvi/hunkr"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.29"
fs2 = "0.4"
git2 = { version = "0.20", default-features = false, features = ["https"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
notify = "8.2"
syntect = "5.3"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.23"
